[gd_scene load_steps=11 format=3 uid="uid://bvqjrgpb8jt7"]

[ext_resource type="Script" path="res://scripts/select_abilities_menu.gd" id="1_pmdim"]
[ext_resource type="Texture2D" uid="uid://q48npsjpkspd" path="res://images/abilities/super_shoot/icon.png" id="3_1v4qa"]
[ext_resource type="FontFile" uid="uid://bmnypigf4h1l8" path="res://font/dogica/OTF/dogica.otf" id="3_6c8bb"]
[ext_resource type="Texture2D" uid="uid://cra3acabwdsme" path="res://images/abilities/shield/icon.png" id="6_2c4nk"]
[ext_resource type="Texture2D" uid="uid://cpoakmaby3fyr" path="res://images/abilities/doble_shoot/laserBlue01.png" id="7_tp1lr"]
[ext_resource type="Texture2D" uid="uid://c24rd55iaomhy" path="res://images/abilities/attack_dron/icon.png" id="8_la60w"]
[ext_resource type="Texture2D" uid="uid://bx71kdo1ob25n" path="res://images/abilities/energy_burst/icon.png" id="9_mefab"]

[sub_resource type="LabelSettings" id="LabelSettings_i8brq"]
font = ExtResource("3_6c8bb")

[sub_resource type="Theme" id="Theme_t4y0x"]
default_font = ExtResource("3_6c8bb")
default_font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_vd2xc"]
font = ExtResource("3_6c8bb")
font_size = 14
font_color = Color(1, 0, 0, 1)

[node name="SelectAbilitiesMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pmdim")

[node name="PositionReference" type="Node2D" parent="."]

[node name="TitleContainer" type="Label" parent="PositionReference"]
offset_left = 194.0
offset_top = 94.0
offset_right = 450.0
offset_bottom = 117.0
text = "Choose Abilities"
label_settings = SubResource("LabelSettings_i8brq")

[node name="Background" type="ColorRect" parent="PositionReference"]
offset_left = 190.0
offset_top = 135.0
offset_right = 1090.0
offset_bottom = 585.0
color = Color(0, 0, 0, 0.670588)

[node name="Line" type="Line2D" parent="PositionReference/Background"]
position = Vector2(32.0615, 159.5)
scale = Vector2(1.04615, 0.25)
points = PackedVector2Array(-13, 0, 67.2805, 0, 220.175, 0, 812, 0)
default_color = Color(0.686275, 0.686275, 0.686275, 1)

[node name="SlotsContainer" type="HBoxContainer" parent="PositionReference/Background"]
layout_mode = 0
offset_left = 60.0
offset_top = 50.0
offset_right = 130.0
offset_bottom = 120.0

[node name="AbilitiesContainer" type="BoxContainer" parent="PositionReference/Background"]
layout_mode = 0
offset_left = 60.0
offset_top = 200.0
offset_right = 840.0
offset_bottom = 400.0

[node name="SuperShootButton" type="TextureButton" parent="PositionReference/Background/AbilitiesContainer"]
layout_mode = 2
texture_normal = ExtResource("3_1v4qa")

[node name="ShieldButton" type="TextureButton" parent="PositionReference/Background/AbilitiesContainer"]
layout_mode = 2
texture_normal = ExtResource("6_2c4nk")

[node name="DoubleShootButton" type="TextureButton" parent="PositionReference/Background/AbilitiesContainer"]
layout_mode = 2
texture_normal = ExtResource("7_tp1lr")

[node name="AttackDroneButton" type="TextureButton" parent="PositionReference/Background/AbilitiesContainer"]
layout_mode = 2
texture_normal = ExtResource("8_la60w")

[node name="EnergyBurstButton" type="TextureButton" parent="PositionReference/Background/AbilitiesContainer"]
layout_mode = 2
texture_normal = ExtResource("9_mefab")

[node name="ButtonContainer" type="VBoxContainer" parent="PositionReference/Background"]
layout_mode = 0
offset_left = 771.0
offset_top = 408.0
offset_right = 817.0
offset_bottom = 425.0
scale = Vector2(2.80891, 2.44851)
theme = SubResource("Theme_t4y0x")

[node name="Go" type="Button" parent="PositionReference/Background/ButtonContainer"]
layout_mode = 2
text = "Go
"

[node name="BackContainer" type="VBoxContainer" parent="PositionReference"]
offset_left = 200.0
offset_top = 540.0
offset_right = 246.0
offset_bottom = 557.0
scale = Vector2(2.80891, 2.44851)
theme = SubResource("Theme_t4y0x")

[node name="Back" type="Button" parent="PositionReference/BackContainer"]
layout_mode = 2
text = "Back
"

[node name="WarningLabel" type="Label" parent="PositionReference"]
offset_left = 860.0
offset_top = 589.0
offset_right = 1092.0
offset_bottom = 633.0
label_settings = SubResource("LabelSettings_vd2xc")

[connection signal="pressed" from="PositionReference/Background/AbilitiesContainer/SuperShootButton" to="." method="_on_super_shoot_button_pressed"]
[connection signal="pressed" from="PositionReference/Background/AbilitiesContainer/ShieldButton" to="." method="_on_shield_button_pressed"]
[connection signal="pressed" from="PositionReference/Background/AbilitiesContainer/DoubleShootButton" to="." method="_on_double_shoot_button_pressed"]
[connection signal="pressed" from="PositionReference/Background/AbilitiesContainer/AttackDroneButton" to="." method="_on_attack_drone_button_pressed"]
[connection signal="pressed" from="PositionReference/Background/AbilitiesContainer/EnergyBurstButton" to="." method="_on_energy_burst_button_pressed"]
[connection signal="pressed" from="PositionReference/Background/ButtonContainer/Go" to="." method="_on_go_pressed"]
[connection signal="pressed" from="PositionReference/BackContainer/Back" to="." method="_on_back_pressed"]
